--- a/meldtokenchecker/src/index.css
+++ b/meldtokenchecker/src/index.css
@@ -26,6 +26,7 @@ body {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease;
+  margin-left: 10px;
 }
 
 .flat-button:hover {
